--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==5.1.6"
 djangorestframework-simplejwt = "==5.4.0"
 djangorestframework = "==3.15.2"
+requests = "==2.32.3"
 
 [dev-packages]
 
