--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "==5.1.6"
 djangorestframework-simplejwt = "==5.4.0"
 djangorestframework = "==3.15.2"
 requests = "==2.32.3"
+django-cors-headers = "==4.7.0"
 
 [dev-packages]
 
