--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,11 @@ djangorestframework-simplejwt = "==5.4.0"
 djangorestframework = "==3.15.2"
 requests = "==2.32.3"
 django-cors-headers = "==4.7.0"
+psycopg2-binary = "==2.9.10"
+dj-database-url = "==2.3.0"
+whitenoise = {extras = ["brotli"], version = "*"}
+gunicorn = "*"
+uvicorn = "*"
 
 [dev-packages]
 
